--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     padding: 20px 10%;
 }
 
+/* HEADER */
+
 nav {
     width: 100%;
     display: flex;
@@ -65,4 +67,49 @@ nav ul li a:hover:before {
     width: 50px;
     object-fit: scale-down;
     cursor: pointer;
+}
+
+/* BODY */
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col {
+    flex-basis: 50%;
+    position: relative;
+}
+
+.feature-img {
+    width: 100%;
+    margin-top: 10px;
+}
+
+.thumbnail-img {
+    width: 280px;
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+    border-radius: 8px;
+    box-shadow: 5px 8px 10px rgba(0, 0, 0, 0.1);
+}
+
+.col h1 {
+    font-size: 40px;
+    font-weight: 600;
+
+    margin-top: 180px;
+}
+
+.col a {
+    text-decoration: none;
+    padding: 18px 50px;
+    margin-top: 70px;
+    border-radius: 30px;
+    box-shadow: 5px 8px 10px rgba(0, 0, 0, 0.1);
+    background: #D9F688;
+    color: #000;
+    font-weight: 700;
+    display: inline-block;
 }
